# daarija-tts

./: .gitignore  Makefile  README.md  normalize.py  pyproject.toml  tts.py
tests/: test_normalize.py  test_tts.py
