[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daarija-tts"
version = "0.1.0"
description = "Text-to-speech CLI for Moroccan Darija (Arabic script)"
requires-python = ">=3.10"
dependencies = ["f5-tts>=1.0.0"]

[tool.setuptools]
py-modules = ["tts", "normalize"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
